--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
          <p>A informática desempenha um papel crucial no combate à corrupção, especialmente através da Lei de Acesso à Informação (LAI), que promove a transparência e o controle social.Tecnologias da informação facilitam o monitoramento de ações governamentais, permitindo que cidadãos e organizações identifiquem e denunciem práticas corruptas. </p>  
 
          <center> <!-- a tag "center" serve para centralizar o conteúdo -->
-         <img src="imagem1.jpg" alt="cidadão calado" width="498" height="500">
+         <img src="corrupção2.png" alt="cidadão calado" width="800" height="1500">
          </center>    
    	
          <h1 id="importanciadalei">IMPORTÂNCIA DA LEI DE ACESSO À INFORMAÇÃO (LAI)</h1>
